# fire_watcher

./: .gitignore  Readme.md
serving/: .dockerignore  .env.example  Makefile  Readme.md  docker-compose.yml  dockerfile  pyproject.toml  scheduler_service.py  server.py  utils_image.py
serving/models/: random_forest_v1.1.joblib
serving/poc/: poc.ipynb
serving/server/: constants.py  scheduler_service.py  schemas.py  server.py  server_lib.py
serving/server/runtime/: Readme.md
serving/server/static/: common.js  header.html  home.html  update.html
serving/static/: common.css  home.html  scheduler.html
training/: .env.example  Makefile  constants.py  pyproject.toml  training_lib.py  utils_image.py
training/auto_encoder/: dataset.py  loss_utils.py  models.py  train.py  utils.py
training/dashboard/: app_dash.py  preprocess_latents.py
training/proof_of_concept/: auto_encoder.ipynb  random_forest.ipynb
